# to-do-list-fastapi

./: Makefile  docker-compose.yaml  pyproject.toml
app/: main.py
app/core/: config.py  database.py
app/core/errors/: base_error.py  category_error.py  user_error.py
app/entities/: entities.py  utils.py
app/mappers/: entities_dto.py  entities_models.py
app/migrations/: env.py
app/migrations/versions/: 09a810a051b4_.py  69811d9226bd_.py  c5c339eae3cd_.py
app/models/: models.py
app/repositories/: base_rep.py  category_rep.py  user_rep.py
app/routers/: category_router.py  user_router.py
app/schemas/: category_dto.py  user_dto.py
app/services/: category_service.py  user_service.py
