[tool.poetry]
name = "to-do-list-fastapi"
version = "0.1.0"
description = ""
authors = ["Nikita <nikitaivanov2341@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.38"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
asyncpg = "^0.30.0"
alembic = "^1.14.1"
pydantic = "^2.10.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
